# kodi-helper

./: .gitignore  Cargo.toml  Makefile.toml  README.md  arm.Dockerfile  elm.json
.github/: dependabot.yml
src/: lib.rs
src-ui/: Main.elm  MainApi.elm  MainHospital.elm  MainTheater.elm  Model.elm  View.elm  ViewCommon.elm  ViewHospital.elm  ViewTheater.elm
src/api/: config.rs  errors.rs  mod.rs  movie.rs  movies.rs
src/kodi_rpc/: clean_video_library.rs  get_directory.rs  get_info_booleans.rs  get_movies.rs  mod.rs  refresh_movie.rs  scan_library.rs  set_movie_details.rs
static/: index.html
