[package]
name = "kodi-helper"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.1"
actix-files = "0.3"
futures = "0.3"
reqwest = { version = "0.10", default-features = false, features = [ "json" ] }
percent-encoding = "2.1"
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
regex = "1.3"
hocon = { version = "0.3", default-features = false, features = [ "serde-support" ] }
lazy_static = "1.4"
strsim = "0.10"
clap = "3.0.0-beta.5"
serde_json = "1"

# serde_json = "*"
